--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "@testing-library/user-event": "^12.1.10",
     "graphql": "^15.6.0",
     "react": "^17.0.2",
+    "react-bootstrap": "^1.6.4",
+    "react-bootstrap-table-next": "^4.0.3",
+    "react-bootstrap-table2-editor": "^1.4.0",
+    "react-bootstrap-table2-paginator": "^2.1.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1"
